# lotr

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.common  Makefile.config  Makefile.mingw  Makefile.os4  Makefile.osx  README  archive.c  archive.h  av.c  av.h  building_enters.h  cartoon.c  cartoon.h  character.c  character.h  characters_pos_ttt.h  combat.c  combat.h  configure.ac  credit.h  game.c  game.h  graphics.c  graphics.h  gui.c  gui.h  indent.sh  init.c  init.h  lord.c  lord.h  lord_sdl.c  lord_sdl.h  lotr.c  lotr.h  lotr_sdl.c  (+28 more)
.github/workflows/: c-cpp.yml
MSVC8/: lotr.sln  lotr.vcproj
debian/: changelog  control  copyright  rules
doc/: INSTALL  README  TODO  cheating.txt  coding-style.txt  scripting.txt  towers.txt
liblotr/: Makefile.am  archive.c  av.c  cartoon.c  cartoon.h  character.c  characters_pos.h  combat.h  game.c  game.h  graphics.c  graphics.h  gui.c  gui.h  icons_ttt.h  init.c  init.h  lotr_sdl.c  lotr_sdl.h  lotr_sdl2.c  map.c  midi.c  object.c  object_names.h  object_prices.h  pythonhelper.h  shape.h  shapes_param.h  sound.c  sound.h  sounds_cd.h  spot.c  spot.h  timing.c  timing.h  utils.h
src/: Makefile.am  lotr.c  playcartoon.c
tools/: Makefile  Makefile.am  README  dendx.c  getbuildings_ttt.c  getcharacters.c  getcharacters_ttt.c  geticons_ttt.c  getobjects.c  getobjects_ttt.c  getprices.c  getsounds_ttt.c  maps2bmp.c  ndxdec.c  ndxenc.c  ripmaps.c
translations/template/: characters.txt  map00.txt  map01.txt  map02.txt  map03.txt  map04.txt  map05.txt  map06.txt  objects.txt  questions.txt
