noinst_LTLIBRARIES = liblotr.la
liblotr_la_CPPFLAGS = -DPREFIX='"@prefix@"' $(HQX_CFLAGS) $(SDL_CFLAGS) $(XML2_CFLAGS)
liblotr_la_LIBADD = $(HQX_LIBS) $(SDL_LIBS) $(XML2_LIBS)
liblotr_la_SOURCES = \
	archive.c \
	archive.h \
	av.c \
	av.h \
	building_enters.h \
	cartoon.c \
	cartoon.h \
	character.c \
	character.h \
	characters_pos.h \
	characters_pos_ttt.h \
	combat.c \
	combat.h \
	credit.h \
	game.c \
	game.h \
	graphics.c \
	graphics.h \
	gui.c \
	gui.h \
	init.c \
	init.h \
	lotr_sdl2.c \
	lotr_sdl.h \
	map.c \
	map.h \
	midi.c \
	midi.h \
	object.c \
	object.h \
	object_names.h \
	object_names_ttt.h \
	object_prices.h \
	pythonhelper.c \
	pythonhelper.h \
	shape.c \
	shape.h \
	shapes_param.h \
	shapes_param_ttt.h \
	sound.c \
	sound.h \
	sounds_cd.h \
	spot.c \
	spot.h \
	timing.c \
	timing.h \
	utils.c \
	utils.h
